--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "serve": "vite preview"
   },
   "devDependencies": {
+    "@types/d3": "7.0.0",
     "typescript": "^4.3.2",
     "vite": "^2.6.0"
+  },
+  "dependencies": {
+    "d3": "7.0.4"
   }
 }
