--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test": "jest"
   },
   "devDependencies": {
     "@types/d3": "7.0.0",
+    "@types/jest": "27.0.2",
+    "jest": "27.2.4",
+    "ts-jest": "27.0.5",
     "typescript": "^4.3.2",
     "vite": "^2.6.0"
   },
